--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </section>
     <aside>
     <footer>
-        <h4>Made with ❤️️ by Horiseon</h4>
+        <h4>Made with ❤️LOVE ️ by Horiseon</h4>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
